# uC-VFS

./: .gitmodules  CMakeLists.txt  readme.md
src/: common.h  entry.c
src/app/: CMakeLists.txt  app.c
src/app/vfs/: CMakeLists.txt  vfs_app.c  vfs_app.h  vfs_test.h  vfs_test_fatfs.c  vfs_test_fatfs.h  vfs_test_inter.c  vfs_test_inter.h  vfs_test_littlefs.c  vfs_test_littlefs.h  vfs_test_spiffs.c  vfs_test_spiffs.h
src/vfs/: CMakeLists.txt  clist.h  disk.c  disk.h  dlist.h  errno.h  fstypes.h  inttypes.h  list.h  mem.c  mem.h  mutex.c  mutex.h  printf.c  printf.h  ramdisk.c  ramdisk.h  string.h  vfs.c  vfs.h
src/vfs/fatfs/: CMakeLists.txt  diskio.c  fatfs_vfs.c  fatfs_vfs.h  ff.h  ffconf.h
src/vfs/littlefs/: CMakeLists.txt  lfs.c  lfs_util.h  littlefs_vfs.c  littlefs_vfs.h
src/vfs/spiffs/: CMakeLists.txt  spiffs_config.h  spiffs_vfs.c  spiffs_vfs.h
